# SLOpPy

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pizza.py  pyproject.toml
grafana/: config.monitoring
grafana/provisioning/dashboards/: FastAPI.json
prometheus/: prometheus.yml  recording.rules
