[tool.poetry]
name = "sloppy"
version = "0.1.0"
description = ""
authors = ["Vitek Urbanec"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.21.2"
pandas = "^1.3.3"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
prometheus-client = "^0.11.0"
prometheus-fastapi-instrumentator = "^5.7.1"
wikipedia = "^1.4.0"
spacy = "^3.1.3"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
